--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,4 +1,5 @@
 html {
+    --bg-very-light: #3c4143;
     --bg-light: #181a1b;
     --bg-dark: #0d1214;
     --text-light: white;
@@ -28,30 +29,58 @@ body {
 
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-
+    
+    display: flex;
+    flex-direction: row;
 }
-.header_banner img {
+
+
+.gitosaur_logo {
     image-rendering: pixelated;
     height: 3rem;
     width: auto;
     
     padding-left: 1rem;
-    display: inline-block;
-}
-.projsearch {
-    float: right;
 }
 
-.page_header  {
-    color: var(--text-dark);
-    padding-left: 1rem;
+.projsearch {
+    padding-right: 1rem;
+    margin-left: auto; 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-.page_header a {
+.project_search_input {
+    appearance: none;
+    outline: 0;
+    border: 0px;
+    color: var(--text-light);
+    background-color: var(--bg-very-light);
+    border-radius: 4px;
+    
+    padding-left: 0.5rem; 
+    height: 1.5rem;
+    width: 10rem;
+}
+
+.breadcrumbs_container {
+    padding-left: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.breadcrumbs {
+    color: var(--text-dark);
+}
+.breadcrumbs a {
     color: var(--text-light);
 }
 
 .project_list {
-    
+    margin-left: auto;
+    margin-right: auto;
 }
 
 tr.light {
